@@ -1,0 +1,9 @@
+package me.admin.retrieverpvp.utils;
+
+import org.bukkit.ChatColor;
+
+public class MessageNoPerm {
+	
+	public static String noPerm = ChatColor.RED + "You can not execute this command!";
+
+}
