@@ -1,0 +1,9 @@
+package me.admin.retrieverpvp.utils;
+
+import org.bukkit.ChatColor;
+
+public class MessageNotPlayer {
+	
+	public static String notPlayer = ChatColor.RED + "You can not execute this command!";
+
+}
