@@ -1,0 +1,10 @@
+package me.admin.retrieverpvp.utils;
+
+import org.bukkit.ChatColor;
+
+public class MessagePvPHeaderFooter {
+	
+	public static String Header = ChatColor.GRAY + "=======================" + ChatColor.DARK_AQUA + "[PvP]" + ChatColor.GRAY + "=======================";
+	public static String Footer = ChatColor.GRAY + "===================================================";
+
+}
